# OSCMS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build_errors.txt  build_errors2.txt  build_errors3.txt  docker-compose.yml  sqlx_prepare.txt  sqlx_prepare2.txt
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/src/auth/: handlers.rs  jwt.rs
backend/api/src/middleware/: auth_guard.rs
backend/api/src/modules/: mod.rs
backend/api/src/modules/attendance/: handlers.rs
backend/api/src/modules/courses/: handlers.rs
backend/api/src/modules/exams/: handlers.rs
backend/api/src/modules/faculty/: handlers.rs
backend/api/src/modules/notifications/: handlers.rs
backend/api/src/modules/students/: handlers.rs
backend/api/src/utils/: errors.rs  mod.rs  pagination.rs  password.rs
docker/: prometheus.yml
frontend/: Dockerfile  next.config.mjs  package.json  tsconfig.json
frontend/app/: layout.tsx  providers.tsx
frontend/app/(auth)/login/: page.module.scss  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/notifications/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/students/: page.tsx
frontend/components/: Sidebar.module.scss  Sidebar.tsx  Topbar.module.scss  Topbar.tsx
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/services/: api.ts
frontend/styles/: globals.scss  themes.scss
prisma/: schema.prisma
scripts/: hash-password.mjs
