[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "sensitive-headers"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Config
dotenvy = "0.15"
config = "0.14"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.6"

# Rate limiting
governor = "0.6"

[dev-dependencies]
axum-test = "14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
